# pub-service

./: .env.template  .gitignore  Makefile  Pub Subs POC.postman_collection.json  README.md  main.py  middleware.py  models.py  pyproject.toml  settings.py  utils.py
iac/: event-bridge.tf  hello-sns-subscription.tf  hello-sns-topic.tf  provider.tf  schedule-sns-subscription.tf  schedule-sns-topic.tf  variables.tf
