[tool.poetry]
name = "pub-service"
version = "0.1.0"
description = ""
authors = ["Mauricio Dal Pont <82180267+mauricio-dalpont@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
boto3 = "^1.35.65"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
